<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kabilova.mychat.UserSettings">

    <TextView
        android:text="@string/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="37dp"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/editTextPass1"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginStart="11dp"
        android:layout_marginTop="30dp"
        android:id="@+id/editTextPass2"
        android:hint="@string/hintPass2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPass1"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignStart="@+id/editTextPass2"
        android:hint="@string/hintPass1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextUsername"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignStart="@+id/editTextPass1"
        android:hint="@string/hintEnterUsername" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonUpdate"
        android:layout_alignEnd="@+id/editTextPass2"
        android:layout_marginEnd="47dp"
        android:id="@+id/buttonDelete"
        tools:text="@string/buttonDeleteUser" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/buttonUpdate"
        tools:text="@string/buttonUpdateUser"
        android:layout_below="@+id/editTextPass2"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginStart="39dp" />

    <TextView
        android:text="@string/textViewPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/editTextPass2"
        android:layout_alignBottom="@+id/editTextPass2"
        android:layout_alignStart="@+id/textView2" />
</RelativeLayout>
